--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "intervention/imagecache": "^2.5",
         "laravel/framework": "^7.24",
         "laravel/tinker": "^2.0",
+        "laravel/ui": "^2.4",
         "santigarcor/laratrust": "^6.1",
         "tymon/jwt-auth": "^1.0"
     },
